# PlasmaSim

./: CMakeLists.txt  LICENSE  README.md  savedTweaks.txt
adMath/: CMakeLists.txt
adMath/include/: adMatrix.h  adQuaternion.h  adScalar.h  adVector.h
adMath/src/: adMatrix.cpp  adQuaternion.cpp  adVector.cpp
src/: CurrentLineField.cpp  CurrentLineField.h  CurrentLineVectorField.cpp  CurrentLineVectorField.h  FieldAccumulator.cpp  FieldAccumulator.h  FieldRenderer.cpp  FieldRenderer.h  ParticleSimulation.cpp  ParticleSimulation.cpp.bak  ParticleSimulation.h  ParticleSimulationCuda.cu  ParticleSystem.cpp  ParticleSystem.h  UniformField.h  VectorFunction.h  cutil_math.h  engine.cpp  engine.h  font.cpp  font.h  main.cpp  sdl_gl_texture.cpp  sdl_gl_texture.h  sim_precision.h  tweaks.cpp  tweaks.h
